[package]
name = "sourcefile"
description = """Retain mapping information when concatenating source files, to make error 
messages more useful"""
version = "0.1.4"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
keywords = ["sourcemap", "source", "map", "file", "location"]
categories = ["text-processing", "parsing", "filesystem", "development-tools::debugging",
    "development-tools::procedural-macro-helpers"]
license = "Apache-2.0/MIT"
repository = "https://github.com/derekdreery/sourcefile-rs"
readme = "README.md"

[dev-dependencies]
tempfile = "3"
